--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
 		"ramda": "^0.28.0",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-hook-form": "^7.30.0",
 		"react-redux": "^8.0.1",
 		"redux": "^4.2.0"
 	},
