--- a/client/package.json
+++ b/client/package.json
@@ -8,18 +8,21 @@
 		"start": "next start",
 		"type-check": "tsc",
 		"test": "jest --watch",
-		"cypress": "cypress open"
+		"cypress": "cypress open",
+		"jest-preview": "jest-preview"
 	},
 	"dependencies": {
-		"@chakra-ui/react": "^1.8.8",
+		"@chakra-ui/react": "@chakra-ui/react@2.0.0",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
 		"@reduxjs/toolkit": "^1.8.1",
+		"@testing-library/cypress": "^8.0.2",
 		"abort-controller": "^3.0.0",
 		"axios": "^0.27.2",
 		"cross-fetch": "^3.1.5",
 		"cypress": "^9.6.0",
-		"framer-motion": "^6.3.3",
+		"framer-motion": "^6",
+		"msw": "^0.39.2",
 		"next": "12.1.5",
 		"ramda": "^0.28.0",
 		"react": "^18.1.0",
@@ -37,7 +40,7 @@
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^14.1.1",
 		"@types/jest": "^27.4.1",
-		"@types/node": "^17.0.30",
+		"@types/node": "^17.0.31",
 		"@types/ramda": "^0.28.11",
 		"@types/react": "^18.0.8",
 		"@types/react-dom": "^18.0.3",
@@ -66,6 +69,7 @@
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^28.0.3",
 		"jest-environment-jsdom": "^28.0.2",
+		"jest-preview": "^0.1.7",
 		"postcss": "^8.4.13",
 		"postcss-syntax": "^0.36.2",
 		"prettier": "^2.6.2",
