--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["<rootDir>/src/*"]
+    }
   },
+
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
