--- a/client/cypress/tsconfig.json
+++ b/client/cypress/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "ES2022",
-		"lib": ["es5", "ESNext", "dom"],
+		"target": "ESNext",
+		"lib": ["es5", "dom"],
 		"types": ["cypress", "@testing-library/cypress"]
 	},
-	"include": ["**/*.ts", "support/index.js"]
+	"include": ["**/*.ts", "**/*.ts"]
 }
